Data.Singular removed from template.

--- a/themes/revealjs/layouts/_default/list.html
+++ b/themes/revealjs/layouts/_default/list.html
@@ -2,7 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}">
   <head>
     <meta charset="utf8">
-    <title>{{ .Site.Title }} - {{ .Data.Singular }} </title>
+    <title>{{ .Site.Title }}</title>
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/reveal.css">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/theme/night.css">
   </head>
